docs(db): correct the GATE-00R blocker claim - the mockk flag is not the gate
An earlier backlog entry claimed that fixing test-infra A1 (adding -Djdk.attach.allowAttachSelf=true so mockk can mock final classes) would unblock GATE-00R. That is wrong and I am correcting it rather than making a speculative Gradle change.

A1 affects broad Kotlin unit-test runs. The GATE-00R capture runs a different set of components, none of which is the mockk path: gradle-db and gradle-task-graph exit 1 (the protocol's documented config-cache observation), static-suite and focused-python-tests exit 1 (the pre-existing Python reds flow in), room/db-inventory exit 2 INVENTORY_DURABILITY_UNCONFIRMED, and the B4 freshness stamps.

What actually blocks a trusted capture, in dependency order: (1) B4 freshness stamps require the Gradle DB task to run and stamp; (2) the Python reds must be paid or formally dispositioned so focused-python-tests stops exiting 1; (3) room/db-inventory must confirm inventory durability. Owner-level work, not a config tweak.

A1 is real but separate: its only identified consumer (GR-14t) was abandoned as zero-row, and the handoff records its fix as an owner decision requiring its own A/B batch plus a check for timing/memory side effects on other suites. Recorded as backlog item 14 with the one-line fix location, explicitly marked as NOT the gate unblocker. The Gradle test config is left untouched.

Docs only; no code or build-config change. Battery unchanged at 1244 passed / 13 failed (the identical pre-existing set).

Co-authored-by: CommandCodeBot <noreply@commandcode.ai>